Tentativa 2 de implementar hot-swap